alignment issue fixed

--- a/Components/Ysbc/YsbcBody/YsbcBody.module.scss
+++ b/Components/Ysbc/YsbcBody/YsbcBody.module.scss
@@ -177,7 +177,10 @@
       font-size: 3rem;
       color: #919090;
       display: block;
-      text-align: center;
+
+      @include response(phone) {
+        text-align: center;
+      }
     }
 
     .layoutContainer1 {
